finish translations and add 404

--- a/src/components/Certification.astro
+++ b/src/components/Certification.astro
@@ -1,10 +1,10 @@
 ---
-const {href,image,completed=false,classnames, name} = Astro.props;
+const {href,image,completed=false,classnames, name, textContext} = Astro.props;
 ---
 
 <li class="flex flex-col">
     <a href={href} target={completed ? "_blank": "_self"} rel="noopener noreferrer">
         <img src={image} class={classnames} alt={name}>
     </a>
-    <span class="text-center font-semibold">{completed? 'Certificado':'En Curso'}</span>
+    <span class="text-center font-semibold">{completed? textContext.Certified:textContext.OnCourse}</span>
 </li>
