--- a/src/components/sections/Projects.astro
+++ b/src/components/sections/Projects.astro
@@ -24,33 +24,7 @@ interface Project{
     technologies: any[];
 }
 
-const projects:Project[] = [
-    {image:"assets/captures/capture_pdf.webp", title:"My PDF Toolkit", 
-        description:"Application for PDF manipulation", 
-        website:"https://mmgkxuq3hr.us-east-1.awsapprunner.com/", 
-        repository:"https://github.com/francisdayl/my_pdf_toolkit",
-        technologies:[Python,Flask,Aws,Docker,Bootstrap,Git]
-    },
-    {image:"assets/captures/capture_genhora.webp", title:"GenHora", 
-        description:"Program that allows to generate all possible schedules based on student/user preferences. The schedules are saved on excel files", 
-        website:"", 
-        repository:"https://github.com/francisdayl/GenHora",
-        technologies:[Python,Selenium,Git]
-    },
-    {image:"assets/captures/capture_techstore.png", title:"TechStore", 
-        description:"Technical test consisting on a Full Stack application with CRUD operations.", 
-        website:"", 
-        repository:"https://github.com/francisdayl/prueba_tecnica_royaltic",
-        technologies:[Angular,Django,MySql,Python,Typescript,Docker,Git]
-    },
-    {image:"assets/captures/catpure_portfolio.webp", title:"Portfolio", 
-        description:"Web Portfolio showcasing profile and skillset", 
-        website:"", 
-        repository:"https://github.com/francisdayl/portfolio",
-        technologies:[AstroIcon,Tailwind,Aws,Git]
-    },
-]
-
+const projects:Project[] = Astro.props.projects;
 ---
 
 <h2 class="text-3xl font-semibold mt-10">Proyectos</h2>
