--- a/src/components/ExperienceItem.astro
+++ b/src/components/ExperienceItem.astro
@@ -1,7 +1,7 @@
 ---
 
 
-const { company, role, date, activities , isCurrent=false} = Astro.props;
+const { company, role, date, activities , isCurrent=false, textContext} = Astro.props;
 ---
 
 <li class="mb-10 ms-6">
@@ -11,7 +11,7 @@ const { company, role, date, activities , isCurrent=false} = Astro.props;
         {
             isCurrent &&
             (<span class="bg-blue-100 text-blue-800 text-sm font-medium me-2 px-2.5 py-0.5 rounded dark:bg-blue-900 dark:text-blue-300 ms-3">
-                Current
+                {textContext.Current}
             </span>)
         }  
         
