--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,7 @@
 ---
-import { late } from "astro:schema"
 import ThemeToggle from "./ThemeToggle.astro"
+
+const textContext = Astro.props.textContext;
 
 const navItems = [
     {title:"CV",
@@ -8,29 +9,29 @@ const navItems = [
       url:"David_Yanez_Lopez_cv_es.pdf"
     },
     {
-        title: "Sobre mí",
+        title: textContext.AboutMe,
         label: "sobre-mi",
-        url: "/#about-me",
+        url: "#about-me",
     },
     {
-      title: "Experiencia",
+      title: textContext.Experience,
       label: "experiencia",
-      url: "/#experience",
+      url: "#experience",
     },
     {
-      title: "Habilidades",
+      title: textContext.Skills,
       label: "Habilidades",
-      url: "/#skills",
+      url: "#skills",
     },
     {
-        title: "Cursos",
+        title: textContext.Courses,
         label: "Cursos",
-        url: "/#courses",
+        url: "#courses",
     },
     {
-        title: "Proyectos",
+        title: textContext.Projects,
         label: "proyectos",
-        url: "/#projects",
+        url: "#projects",
     },
   
 ]
