--- a/src/components/sections/AboutMe.astro
+++ b/src/components/sections/AboutMe.astro
@@ -6,16 +6,18 @@ import Music from "../icons/Music.astro"
 import Puzzle from "../icons/Puzzle.astro"
 import SocialIcon from "../SocialIcon.astro"
 
+const textContext = Astro.props.textContext;
+
 ---
 <div class="flex flex-col md:flex-row justify-between" >
   <div class="order-0 self-center w-100 md:w-1/2">
-    <h2 class="text-bold text-3xl">Hola Soy David</h2>
+    <h2 class="text-bold text-3xl">{textContext.Greeting}</h2>
     <p class="text-pretty">
-      Ingeniero en computación con más de 3 años de experiencia, especializado en Python y Django. He colaborado y liderado proyectos web, móviles, bases de datos, inteligencia artificial y automatización, aplicando diferentes tecnologías según cada necesidad.
+      {textContext.Description}
     </p>
     <div
       class="relative flex flex-col gap-5 overflow-hidden w-full mt-6 md:mt-14 mb-5 md:mb-0">
-      <h2 class="text-xl md:text-2xl font-semibold">Mis hobbies</h2>
+      <h2 class="text-xl md:text-2xl font-semibold">{textContext.Hobbies}</h2>
       <ul class="relative flex flex-row w-50 justify-between ">
         <li class="size-10"><Music/></li>
         <li class="size-10"><Exercise/></li>
