redirect to translated cv

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,7 +6,7 @@ const textContext = Astro.props.textContext;
 const navItems = [
     {title:"CV",
       label:"CV",
-      url:"David_Yanez_Lopez_cv_es.pdf"
+      url:textContext.CVFile 
     },
     {
         title: textContext.AboutMe,
