add typwriter and fix lang bug

--- a/src/components/ThemeToggle.astro
+++ b/src/components/ThemeToggle.astro
@@ -3,8 +3,8 @@ import SunIcon from "./icons/Sun.astro"
 import MoonIcon from "./icons/Moon.astro"
 import SystemIcon from "./icons/System.astro"
 
-
-const THEMES = Astro.props.themeNames
+const currentLanguage =Astro.url.toString().includes("/en")? 'en': 'es';
+const THEMES = ["Light", "Dark", "System"];
 ---
 
 <div class="relative ml-1 mr-1">
@@ -25,7 +25,8 @@ const THEMES = Astro.props.themeNames
     />
   </button>
   <div
-    transition:persist
+  transition:persist
+  
     id="themes-menu"
     class="absolute hidden scale-80 top-8 right-0 text-sm p-1 min-w-[8rem] rounded-md border border-gray-100 bg-white/90 dark:bg-gray-900/90 dark:border-gray-500/20 shadow-[0_3px_10px_rgb(0,0,0,0.2)] backdrop-blur-md"
   >
