--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,7 +11,7 @@ interface Props {
 
 const { title } = Astro.props;
 const description = "David Yanez Lopez, Desarrollador full stack con más de 3 años de experiencia creando soluciones informáticas de diferente naturaleza" ;
-const currentLanguage =Astro.url.toString().endsWith("/")? 'es': 'en';
+const currentLanguage =Astro.url.toString().includes("/en")? 'en': 'es';
 
 ---
 
