--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -1,5 +1,6 @@
 ---
 import Repository from './icons/Repository.astro';
+import Youtube from './icons/Youtube.astro';
 import Web from './icons/Web.astro';
 
 interface Props {
@@ -7,10 +8,11 @@ interface Props {
 	description: string;
 	repository?: string;
 	website?: string;
+    video?: string;
     img: string;
 }
 
-const { img, repository,website, title, description } = Astro.props;
+const { img, repository,website, title, description, video } = Astro.props;
 ---
 
 <li class="p-4 bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700 ">
@@ -22,6 +24,9 @@ const { img, repository,website, title, description } = Astro.props;
         }
         {repository && (
             <Repository class="ml-2 size-6 hover:animate-scale" size="6" href={repository}/>)
+        }
+        {video && (
+            <Repository class="ml-2 size-6 hover:animate-scale" size="6" href={video}/>)
         }
     </div>
     <p>{description}</p>
