fix youtube icon

--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -26,7 +26,7 @@ const { img, repository,website, title, description, video } = Astro.props;
             <Repository class="ml-2 size-6 hover:animate-scale" size="6" href={repository}/>)
         }
         {video && (
-            <Repository class="ml-2 size-6 hover:animate-scale" size="6" href={video}/>)
+            <Youtube class="ml-2 size-6 hover:animate-scale" size="6" href={video}/>)
         }
     </div>
     <p>{description}</p>
