--- a/src/components/sections/Projects.astro
+++ b/src/components/sections/Projects.astro
@@ -20,6 +20,7 @@ interface Project{
     title: string;
     description: string;
     website: string;
+    video: string;
     repository: string;
     technologies: any[];
 }
@@ -32,7 +33,7 @@ const projects:Project[] = Astro.props.projects;
 <ul class="relative grid grid-cols-1 justify-center md:grid-cols-2 gap-14 w-full mx-auto my-10 px-10 sm:px-0">
     {projects.map(project=>(
         <ProjectCard img={project.image} title={project.title} description={project.description}
-        repository={project.repository} website={project.website}>
+        repository={project.repository} website={project.website} video={project.video}>
             <ul class="flex flex-row justify-start gap-3 mt-3">
                 {
                     project.technologies.map(TechnologyComponent =>
